--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.0.0'
     compile 'com.android.support:design:23.0.0'
     compile files('libs/commons-io-2.4.jar')
+    compile 'com.github.satyan:sugar:1.4'
 }
